--- a/index.html
+++ b/index.html
@@ -17,8 +17,10 @@
                 <input type="email" id="to" placeholder="To" required>
                 <input type="text" id="subject" placeholder="Subject" required>
                 <textarea id="body" placeholder="Body" required></textarea>
-                <button type="submit">Send</button>
             </form>
+            <div class="container">
+                <button class="button-send" role="button">Send</button>
+            </div>
         </div>
         <div class="inbox">
             <h2>Inbox</h2>
