Created User model, began middleware and routes, added login authentication behavior

--- a/index.html
+++ b/index.html
@@ -14,8 +14,8 @@
         <div class="compose">
             <h2>Compose:</h2>
             <form id="email-form">
-                <input type="email" id="to" placeholder="To" required>
-                <input type="text" id="subject" placeholder="Subject" required>
+                <input type="email" id="to" placeholder="To:" required>
+                <input type="text" id="subject" placeholder="Subject">
                 <textarea id="body" placeholder="Body" required></textarea>
             </form>
             <div class="container">
