I said I was going to call it a night, but then I decided to churn out a little Login screen

--- a/index.html
+++ b/index.html
@@ -11,6 +11,17 @@
     <div id="app">
         <h1>Bear Mail</h1>
         <h2>A bare necessities email client</h2>
+
+        <!-- Moving to Login Page
+         <div class="login">
+            <h2>Login</h2>
+            <form id="login-form">
+              <input type="email" id="email" placeholder="Email" required>
+              <input type="password" id="password" placeholder="Password" required>
+              <button type="button-submit">Login</button>
+            </form>
+        </div> -->
+
         <div class="compose">
             <h2>Compose:</h2>
             <form id="email-form">
@@ -19,7 +30,7 @@
                 <textarea id="body" placeholder="Body" required></textarea>
             </form>
             <div class="container">
-                <button class="button-send" role="button">Send</button>
+                <button class="button" role="button">Send</button>
             </div>
         </div>
         <div class="inbox">
