--- a/login.html
+++ b/login.html
@@ -5,24 +5,25 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Email Client</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="basicStyling.css">
+  <link rel="stylesheet" href="login.css">
 </head>
+
 <body>
   <div id="app">
+   <div class="container">
     <div class="login">
-      <h2>Login</h2>
+      <h2>Login:</h2>
       <form id="login-form">
-        <input type="email" id="email" placeholder="Email" required>
-        <input type="password" id="password" placeholder="Password" required>
-        <button type="submit">Login</button>
+         <input type="email" id="email" placeholder="Email" required>
+         <input type="password" id="password" placeholder="Password" required>
+         <button class="button" role="button">Login</button>
       </form>
+   </div>
+   </div>
     </div>
-    <div class="compose" style="display:none;">
-      <!-- Compose Email Form -->
-    </div>
-    <div class="inbox" style="display:none;">
-      <!-- Inbox -->
-    </div>
+    <!-- <div class="compose" style="display:none;"> Compose here </div>
+    <div class="inbox" style="display:none;">Inbox here </div> -->
   </div>
   <script src="app.js"></script>
 </body>
