--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bear Mail</title>
-    <link rel="stylesheet" href="basicStyling.css">
+    <link rel="stylesheet" href="styling/basic.css">
 </head>
 <body>
     <div id="app">
@@ -23,7 +23,7 @@
         </div> -->
 
         <div class="compose">
-            <h2>Compose:</h2>
+            <h3>Compose</h3>
             <form id="email-form">
                 <input type="email" id="to" placeholder="To:" required>
                 <input type="text" id="subject" placeholder="Subject">
@@ -34,7 +34,7 @@
             </div>
         </div>
         <div class="inbox">
-            <h2>Inbox</h2>
+            <h3>Inbox</h3>
             <div id="emails"></div>
         </div>
     </div>
