--- a/login.html
+++ b/login.html
@@ -20,12 +20,14 @@
                <input type="email" id="email" placeholder="Email" required>
                <input type="password" id="password" placeholder="Password" required>
                <button class="button" role="button">Login</button>
+               <button class="button" role="button">Register</button>
             </form>
          </div>
       </div>
    </div>
    <!-- <div class="compose" style="display:none;"> Compose here </div>
    <div class="inbox" style="display:none;">Inbox here </div> -->
-   <script src="app.js"></script>
+   <!-- <script src="app.js"></script> -->
+   <script src="login.js"></script>
 </body>
 </html>
