--- a/reset.html
+++ b/reset.html
@@ -23,6 +23,6 @@
          </div>
       </div>
    </div>
-   <script src="login.js"></script>
+   <script src="reset.js"></script>
 </body>
 </html>
