--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
             <form id="email-form">
                 <input type="email" id="to" placeholder="To:" required>
                 <input type="text" id="subject" placeholder="Subject">
-                <textarea id="body" placeholder="Body" required></textarea>
+                <textarea id="body" placeholder="Body" rows="25" required></textarea>
             </form>
             <div class="container">
                 <button class="button" role="button">Send</button>
